<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.haris.listingapp.ui.detail.DetailViewModel" />

        <variable
            name="country"
            type="com.haris.listingapp.data.model.Country" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline_h_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_detail_bottom_cornered" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:onClick="@{viewModel::back}"
            android:paddingStart="@dimen/key_line_4"
            android:paddingEnd="@dimen/key_line_4"
            app:layout_constraintBottom_toTopOf="@id/img_flag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_arrow_back_ios" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_flag"
            imageSvg="@{country.flag}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/key_line_5"
            android:layout_marginEnd="@dimen/key_line_5"
            android:elevation="@dimen/card_elevation"
            app:layout_constraintBottom_toBottomOf="@id/guideline_h_40"
            app:layout_constraintDimensionRatio="4:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_h_40"
            app:layout_constraintWidth_percent=".8"
            app:srcCompat="@drawable/ic_logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_country_name"
            isGone="@{country.name.empty}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/key_line_4"
            android:layout_marginEnd="@dimen/key_line_4"
            android:background="@drawable/bg_search_bar"
            android:padding="@dimen/key_line_4"
            app:layout_constraintBottom_toTopOf="@id/cl_country_capital"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_flag">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/country"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_country_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@{country.name}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_country_name"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_country_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_country_capital"
            isGone="@{country.capital.empty}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/key_line_4"
            android:layout_marginEnd="@dimen/key_line_4"
            android:background="@drawable/bg_search_bar"
            android:padding="@dimen/key_line_4"
            app:layout_constraintBottom_toTopOf="@id/cl_continent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_country_name">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/capital"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_country_capital"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@{country.capital}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_country_capital"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_country_capital"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_continent"
            isGone="@{country.region.empty}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/key_line_4"
            android:layout_marginEnd="@dimen/key_line_4"
            android:background="@drawable/bg_search_bar"
            android:padding="@dimen/key_line_4"
            app:layout_constraintBottom_toTopOf="@id/cl_country_population"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_country_capital">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/continent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_continent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@{country.region}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_continent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_continent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_country_population"
            isGone="@{country.population == 0}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/key_line_4"
            android:layout_marginEnd="@dimen/key_line_4"
            android:background="@drawable/bg_search_bar"
            android:padding="@dimen/key_line_4"
            app:layout_constraintBottom_toTopOf="@id/cl_country_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_continent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/population"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_country_population"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@{country.peoples}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_country_population"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_country_population"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_country_currency"
            isGone="@{country.currency.empty}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/key_line_4"
            android:layout_marginEnd="@dimen/key_line_4"
            android:background="@drawable/bg_search_bar"
            android:padding="@dimen/key_line_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_country_population">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/currency"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_country_currency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@{country.currency}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_country_currency"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_country_currency"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h_40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".25" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>